template/kubernetes/infrastructure/controllers/external-dns/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/managed-by: flux
    ${cluster_node_label_domain}/dns-api-token: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
